AM_CXXFLAGS = -g -std=c++0x -pedantic -Wall -Wextra -Weffc++ \
	 -Woverloaded-virtual -Wc++11-compat

bin_PROGRAMS = tegel
tegel_SOURCES = ast.cpp ast_factories.hpp ast.hpp ast_printer.hpp \
		backend.hpp common.hpp constant.cpp constant.hpp \
		lexical.cpp main.cpp parser.cpp parser.hpp \
		py_backend.cpp py_backend.hpp symbol.cpp symbol.hpp \
		type.cpp type.hpp
